--- a/app/webroot/css/test_style.css
+++ b/app/webroot/css/test_style.css
@@ -6,23 +6,16 @@ clear: both;
 font-weight: normal;
 }
 
-
-
-/* SQL log */
-.cake-sql-log {
-	background: #fff;
-}
-.cake-sql-log td {
-	padding: 4px 8px;
-	text-align: left;
-	font-family: Monaco, Consolas, "Courier New", monospaced;
-}
-.cake-sql-log caption {
-	color:#fff;
-}
+.cake-sql-log{font-size: 15px}
 
 a:hover {
 	color: #ff4b33;
+}
+
+body, input, textarea {
+color: #666;
+font-size: 12px;
+line-height: 18px;
 }
 
 body {
@@ -197,113 +190,3 @@ padding-left: 20px;
 text-decoration: none;
 }
 
-/***************************/
-/ Login
-/***************************/
-body.login {
-	background: #FBFBFB;
-	min-width: 0;
-}
-
-#login {
-width: 320px;
-padding: 114px 0 0;
-margin: auto;
-}
-.login h1{font-size: 25px;margin-left: 50px}
-.login h1 a {
-background: url(logoKryzalead.png) no-repeat top center;
-width: 450px;
-height: 217px;
-text-indent: -9999px;
-display: block;
-}
-
-.login form {
-margin-left: 8px;
-padding: 26px 24px 46px;
-font-weight: normal;
-background: white;
-border: 1px solid #E5E5E5;
--moz-box-shadow: rgba(200,200,200,0.7) 0 4px 10px -1px;
--webkit-box-shadow: rgba(200,200,200,0.7) 0 4px 10px -1px;
-box-shadow: rgba(200,200,200,0.7) 0 4px 10px -1px;
-}
-
-.login label {
-color: #777;
-font-size: 14px;
-}
-.login form .input-text {
-font-weight: 200;
-font-size: 24px;
-line-height: 1;
-width: 100%;
-padding: 3px;
-margin-top: 2px;
-margin-right: 6px;
-margin-bottom: 16px;
-border: 1px solid #E5E5E5;
-background: #FBFBFB;
-outline: none;
--moz-box-shadow: inset 1px 1px 2px rgba(200,200,200,0.2);
--webkit-box-shadow: inset 1px 1px 2px rgba(200,200,200,0.2);
-box-shadow: inset 1px 1px 2px rgba(200,200,200,0.2);
-}
-
-#login form p.submit {
-padding: 0;
-}
-
-#login form p {
-margin-bottom: 0;
-}
-
-.submit {
-border-color: #DFDFDF;
-}
-
-.login .button-primary {
-font-size: 13px!important;
-line-height: 16px;
-padding: 3px 10px;
-float: right;
-}
-
-input.button-primary, button.button-primary, a.button-primary {
-border-color: #298CBA;
-font-weight: bold;
-color: white;
-background: #21759B url(button-grad.png) repeat-x scroll left top;
-text-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0;
-}
-
-.submit input, .button, input.button, .button-primary, input.button-primary{
-text-decoration: none;
-font-size: 12px!important;
-line-height: 13px;
-padding: 3px 8px;
-cursor: pointer;
-border-width: 1px;
-border-style: solid;
--webkit-border-radius: 11px;
-border-radius: 11px;
--moz-box-sizing: content-box;
--webkit-box-sizing: content-box;
-box-sizing: content-box;
-}
-
-input.button-primary:hover,button.button-primary:hover,a.button-primary:hover{
-border-color:#13455b;color:#eaf2fa;}
-
-.login #nav, .login #backtoblog {
-text-shadow: white 0 1px 0;
-margin: 0 0 0 16px;
-padding: 16px 16px 0;
-}
-#backtoblog a {
-color: #21759B!important;
-}
-#backtoblog a:hover {
-color: #ff4b33!important;
-}
