Modification:  - Bloc central admin passer à 75%

--- a/app/webroot/css/admin.scss
+++ b/app/webroot/css/admin.scss
@@ -1500,7 +1500,7 @@ Background*/
 	display:inline-block;
 	vertical-align:top;
 	min-width:425px;
-	width:60%;
+	width:75%;
 	padding:15px;
 	margin:25px 25px 10px 0;
 	background:whiteSmoke;
@@ -1526,7 +1526,7 @@ Background*/
 #blocsAjoutCote{
 	display:inline-block;
 	vertical-align:top;
-	margin:25px 70px 0 0;
+	margin:25px 0 0 0;
 	width:180px;
 }	
 
