--- a/app/webroot/css/admin.css
+++ b/app/webroot/css/admin.css
@@ -2091,7 +2091,7 @@ Background*/
   display: inline-block;
   vertical-align: top;
   min-width: 425px;
-  width: 60%;
+  width: 75%;
   padding: 15px;
   margin: 25px 25px 10px 0;
   background: whiteSmoke;
@@ -2118,7 +2118,7 @@ Background*/
 #blocsAjoutCote {
   display: inline-block;
   vertical-align: top;
-  margin: 25px 70px 0 0;
+  margin: 25px 0 0 0;
   width: 180px;
 }
 
