--- a/app/webroot/css/admin.css
+++ b/app/webroot/css/admin.css
@@ -130,12 +130,12 @@ blockquote, q {
 
 /* line 90, admin.scss */
 .contentRadiusHaut, #content .bloc .title {
-  -webkit-border-radius: 10px 10px;
-  -moz-border-radius: 10px 10px 0px 0px / 10px 10px 0px 0px;
-  -o-border-radius: 10px 10px 0px 0px / 10px 10px 0px 0px;
-  -ms-border-radius: 10px 10px 0px 0px / 10px 10px 0px 0px;
-  -khtml-border-radius: 10px 10px 0px 0px / 10px 10px 0px 0px;
-  border-radius: 10px 10px 0px 0px / 10px 10px 0px 0px;
+  -webkit-border-radius: 9px 9px;
+  -moz-border-radius: 9px 9px 0px 0px / 9px 9px 0px 0px;
+  -o-border-radius: 9px 9px 0px 0px / 9px 9px 0px 0px;
+  -ms-border-radius: 9px 9px 0px 0px / 9px 9px 0px 0px;
+  -khtml-border-radius: 9px 9px 0px 0px / 9px 9px 0px 0px;
+  border-radius: 9px 9px 0px 0px / 9px 9px 0px 0px;
 }
 
 /* -- Default -- */
@@ -207,12 +207,12 @@ blockquote, q {
   -webkit-box-shadow: 0px 5px 10px #111111;
   -o-box-shadow: 0px 5px 10px #111111;
   box-shadow: 0px 5px 10px #111111;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
+  -moz-border-radius: 11px;
+  -webkit-border-radius: 11px;
+  -o-border-radius: 11px;
+  -ms-border-radius: 11px;
+  -khtml-border-radius: 11px;
+  border-radius: 11px;
 }
 
 /** Search Form **/
@@ -226,12 +226,12 @@ blockquote, q {
   margin: 5px 0 10px 10px;
   border: 1px solid #505050;
   vertical-align: middle;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -o-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -khtml-border-radius: 10px;
-  border-radius: 10px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
 }
 
 /* line 191, admin.scss */
@@ -634,7 +634,7 @@ blockquote, q {
   -webkit-text-shadow: none;
   -o-text-shadow: none;
   text-shadow: none;
-  background: transparent url(images/white-arrow.png) no-repeat 96% -5px;
+  background: #e7e7e7 url(images/white-arrow.png) no-repeat 96% -5px;
   border-bottom: 1px solid #D6D6D6;
   border-top: 1px solid #FCFDFD;
   border-right: 4px solid #D6D6D6;
@@ -642,7 +642,7 @@ blockquote, q {
 
 /* line 419, admin.scss */
 #sidebar.white > ul > li:hover > a, #sidebar.white > ul > li.current > a {
-  background-color: #E7E7E7;
+  background-color: #ECECEC;
   color: #09f;
   border-right-color: #808080;
 }
@@ -797,12 +797,12 @@ blockquote, q {
   -webkit-box-shadow: 0px 5px 10px #888888;
   -o-box-shadow: 0px 5px 10px #888888;
   box-shadow: 0px 5px 10px #888888;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
+  -moz-border-radius: 11px;
+  -webkit-border-radius: 11px;
+  -o-border-radius: 11px;
+  -ms-border-radius: 11px;
+  -khtml-border-radius: 11px;
+  border-radius: 11px;
 }
 
 /* line 521, admin.scss */
@@ -1064,12 +1064,12 @@ blockquote, q {
   padding: 10px;
   background-color: #F7F7F7;
   position: relative;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -o-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -khtml-border-radius: 10px;
-  border-radius: 10px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
 }
 
 /* line 704, admin.scss */
