--- a/app/webroot/css/admin.scss
+++ b/app/webroot/css/admin.scss
@@ -87,7 +87,7 @@ blockquote, q {quotes: "" "";}
 /* ---------------- */
 .boxOmbre		{@include box-shadow(#444,0px,2px,10px);}
 .checkerBoxOmbre	{@include box-shadow(#D2D2D2,0px,0px,10px);}
-.contentRadiusHaut 	{@include border-radius (10px 10px 0px 0px,10px 10px 0px 0px)};
+.contentRadiusHaut 	{@include border-radius (9px 9px 0px 0px,9px 9px 0px 0px)};
 
 /* -- Default -- */
 $default-box-shadow-h-offset:0px;
@@ -109,12 +109,12 @@ $none:none;
 	@include text-shadow;}
 
 @mixin radius{
-	@include border-radius(10px);}
+	@include border-radius(5px);}
 
 @mixin ombreRadius($ombreFoncee){
 	$default-box-shadow-color:$ombreFoncee;
 		@include box-shadow;
-		@include border-radius;}
+		@include border-radius(11px);}
 
 @mixin ombreSiderbar{
 	$default-box-shadow-color:$ombreFoncee;
@@ -411,13 +411,13 @@ $none:none;
 	-webkit-text-shadow: none;
 	-o-text-shadow: none;
 	text-shadow: none;
-	background: transparent url(images/white-arrow.png) no-repeat 96% -5px;
+	background: #E7E7E7 url(images/white-arrow.png) no-repeat 96% -5px;
 	border-bottom: 1px solid #D6D6D6;
 	border-top: 1px solid #FCFDFD;
 	border-right: 4px solid #D6D6D6;}
 
 #sidebar.white>ul>li:hover>a, #sidebar.white>ul>li.current>a{
-	background-color: #E7E7E7;
+	background-color: #ECECEC;
 	color: #09f;
 	border-right-color: #808080;}
 
