--- a/app/webroot/css/admin.css
+++ b/app/webroot/css/admin.css
@@ -121,6 +121,7 @@ blockquote, q {
 }
 
 /* line 89, admin.scss */
+/*
 .checkerBoxOmbre, #content .checker:hover, #content .radio:hover {
   -moz-box-shadow: 0px 0px 10px #d2d2d2;
   -webkit-box-shadow: 0px 0px 10px #d2d2d2;
@@ -1829,24 +1830,29 @@ blockquote, q {
 
 /*Checkbox/Radio*/
 /* line 1302, admin.scss */
+/*
 .selector, .checker, .button, .radio, .uploader {
   position: relative;
   display: inline-block;
   padding: 0px;
   margin: 0px;
 }
-
+*/
 /* line 1308, admin.scss */
+/*
 .selector span, .checker span, .button span, .radio span, .uploader span {
   display: block;
 }
-
+*/
 /* line 1309, admin.scss */
+/*
 #content .checker:hover, #content .radio:hover {
   /*+box-shadow:0px 0px 10px #D2D2D2;*/
 }
+*/
 
 /* line 1313, admin.scss */
+/*
 #content .checker, #content .checker span, #content .checker input, #content .radio, #content .radio span, #content .radio input {
   width: 50px !important;
   height: 24px !important;
@@ -1856,11 +1862,13 @@ blockquote, q {
 }
 
 /* line 1320, admin.scss */
+/*
 #content .checker span, #content .radio span {
   background: url(checkbox.png) bottom left;
 }
 
 /* line 1323, admin.scss */
+/*
 #content .checker span.checked, #content .radio span.checked {
   background-position: top left;
 }
