--- a/app/webroot/css/admin.css
+++ b/app/webroot/css/admin.css
@@ -139,7 +139,7 @@ blockquote, q {
 }
 
 /* line 101, admin.scss */
-.checkerBoxOmbre, #content .checker:hover, #content .radio:hover {
+.checkerBoxOmbre {
   -moz-box-shadow: 0px 0px 10px #d2d2d2;
   -webkit-box-shadow: 0px 0px 10px #d2d2d2;
   -o-box-shadow: 0px 0px 10px #d2d2d2;
@@ -2136,44 +2136,31 @@ blockquote, q {
   font-weight: bold !important;
 }
 
-/*Checkbox/Radio*/
-/* line 1503, admin.scss */
-.selector, .checker, .button, .radio, .uploader {
-  position: relative;
-  display: inline-block;
-  padding: 0px;
-  margin: 0px;
+/*Checkbox/Radio
+.selector, .checker, .button, .radio, .uploader{
+	position: relative;
+	display: inline-block;
+	padding: 0px;
+	margin: 0px;
 }
+.selector span, .checker span, .button span, .radio span, .uploader span{display: block;}
+#content .checker:hover, #content .radio:hover{
+	+box-shadow:0px 0px 10px #D2D2D2;
+	@extend .checkerBoxOmbre;}
 
-/* line 1509, admin.scss */
-.selector span, .checker span, .button span, .radio span, .uploader span {
-  display: block;
+#content .checker, #content .checker span, #content .checker input, #content .radio, #content .radio span, #content .radio input{
+	width: 50px !important;
+	height: 24px !important;
+	cursor: pointer;
+	margin-bottom: 4px;
+	margin-right: 5px;
 }
-
-/* line 1510, admin.scss */
-#content .checker:hover, #content .radio:hover {
-  /*+box-shadow:0px 0px 10px #D2D2D2;*/
+#content .checker span, #content .radio span{
+	background: url(checkbox.png) bottom left;
 }
-
-/* line 1514, admin.scss */
-#content .checker, #content .checker span, #content .checker input, #content .radio, #content .radio span, #content .radio input {
-  width: 50px !important;
-  height: 24px !important;
-  cursor: pointer;
-  margin-bottom: 4px;
-  margin-right: 5px;
-}
-
-/* line 1521, admin.scss */
-#content .checker span, #content .radio span {
-  background: url(checkbox.png) bottom left;
-}
-
-/* line 1524, admin.scss */
-#content .checker span.checked, #content .radio span.checked {
-  background-position: top left;
-}
-
+#content .checker span.checked, #content .radio span.checked{
+	background-position: top left;
+}*/
 /*Select*/
 /* line 1528, admin.scss */
 #content .selector, #content .selector select, #content .selector span {
