--- a/app/webroot/css/admin.scss
+++ b/app/webroot/css/admin.scss
@@ -29,19 +29,24 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 /* RESET HTML5 */
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {display:block;}
 
-body{
-	line-height: 1;
-	color: black;
-	background: white;
+/* Général */
+html,
+body {
+	height: 100%;
+	margin: 0;
+	padding: 0;}
+
+body {
+	font-family: sans-serif;
 	font-size: 0.75em;
-	font-family: Arial, Helvetica, Sans-serif;
-	background-color:#FFF;}
+	line-height: 1.4em;
+	min-width: 600px;
+	background-color: white;}
+
+ol, ul {list-style: none; padding:0;}
 
 /* remember to define focus styles! */
 :focus {outline: 0;}
-
-ol, ul {list-style: none;padding:0;}
-
 * {padding:0; margin:0;}
 
 /* tables still need 'cellspacing="0"' in the markup */
@@ -53,34 +58,30 @@ caption, th, td {
 	text-align: left;
 	font-weight: normal;}
 
-blockquote:before, blockquote:after,
-q:before, q:after {content: "";}
-
+blockquote:before, blockquote:after, q:before, q:after {content: "";}
 blockquote, q {quotes: "" "";}
 
 /* font-face */
 @font-face {
-    font-family: 'ftusj';
-    src: url('fonts/ftusj/fff_tusj.eot');
-    src: url('fonts/ftusj/fff_tusj.eot?#iefix') format('embedded-opentype'),
-         url('fonts/ftusj/fff_tusj.woff') format('woff'),
-         url('fonts/ftusj/fff_tusj.ttf') format('truetype'),
-         url('fonts/ftusj/fff_tusj-wfont.svg#FFFTusjBold') format('svg');
-    	font-weight: normal; font-style: normal;}
+	font-family: 'ftusj';
+		src: url('fonts/ftusj/fff_tusj.eot');
+		src: url('fonts/ftusj/fff_tusj.eot?#iefix') format('embedded-opentype'),
+			url('fonts/ftusj/fff_tusj.woff') format('woff'),
+			url('fonts/ftusj/fff_tusj.ttf') format('truetype'),
+			url('fonts/ftusj/fff_tusj-wfont.svg#FFFTusjBold') format('svg');
+				font-weight: normal; font-style: normal;}
 
 @font-face {
-font-family: 'phoenix';
-src: url('fonts/phoenix/phoenixscriptflf.eot');
-src: url('fonts/phoenix/phoenixscriptflf.eot?#iefix') format('embedded-opentype'),
-     url('fonts/phoenix/phoenixscriptflf.woff') format('woff'),
-     url('fonts/phoenix/phoenixscriptflf.ttf') format('truetype'),
-     url('fonts/phoenix/phoenixscriptflf.svg#PhoenixScriptFLFRegular') format('svg');
-	font-weight: normal;font-style: normal;}
-
+	font-family: 'phoenix';
+		src: url('fonts/phoenix/phoenixscriptflf.eot');
+		src: url('fonts/phoenix/phoenixscriptflf.eot?#iefix') format('embedded-opentype'),
+			url('fonts/phoenix/phoenixscriptflf.woff') format('woff'),
+			url('fonts/phoenix/phoenixscriptflf.ttf') format('truetype'),
+			url('fonts/phoenix/phoenixscriptflf.svg#PhoenixScriptFLFRegular') format('svg');
+				font-weight: normal; font-style: normal;}
 
 .cb, .clear{clear: both;}
 .relative{position: relative;}
-
 
  /* faire le degrader voir ligne 496 */
 #head {
@@ -97,9 +98,11 @@ src: url('fonts/phoenix/phoenixscriptflf.eot?#iefix') format('embedded-opentype'
 /* ------------------- */
 /*   FRAMEWORKS  */
 /* ---------------- */
-.boxOmbre			{@include box-shadow(#444,0px,2px,10px);}
-.checkerBoxOmbre	{@include box-shadow(#D2D2D2,0px,0px,10px);}
-.contentRadiusHaut {@include border-radius (9px 9px 0px 0px,9px 9px 0px 0px)};
+.checkerBoxOmbre{@include box-shadow(#444,0px,2px,10px);}
+.checkerBoxOmbre{@include box-shadow(#D2D2D2,0px,0px,10px);}
+.contentRadiusHaut{@include border-radius (9px 9px 0px 0px,9px 9px 0px 0px)};
+.aideRadiusBas{@include border-radius (0px 0px 9px 9px,0px 0px 9px 9px)};
+.aideRadiusBasBouton{@include border-radius (0px 0px 3px 3px, 0px 0px 3px 3px)};
 
 /* -- Default -- */
 $default-box-shadow-h-offset:0px;
@@ -113,6 +116,7 @@ $default-text-shadow-v-offset:1px;
 $default-text-shadow-blur:4px;
 
 /* --  Mixin -- */
+$vide:"";
 $ombreClair:#888;
 $ombreFoncee:#111;
 $none:none;
@@ -122,6 +126,11 @@ $none:none;
 
 @mixin radius{
 	@include border-radius(5px);}
+
+@mixin ombreRadiusAide($ombreClair){
+	$default-box-shadow-color:$ombreClair;
+		@include box-shadow;
+		@include border-radius(0px 0px 9px 9px, 0px 0px 9px 9px);}
 
 @mixin ombreRadius($ombreFoncee){
 	$default-box-shadow-color:$ombreFoncee;
@@ -331,45 +340,39 @@ $none:none;
 
 
 /* **********************************************  MENU AIDE ******************************************************** */
-#aide {margin-top:40px;
-	position: relative;
-}
+.hidden,
+.js .closed .inside, .js .hide-if-js,
+.no-js .hide-if-no-js {display: none;}
 
+#aide {
+	margin-top:40px;
+	position: relative;}
 
-#screen-options-wrap,
-#contextual-help-wrap {
+#ecran_options_wrap, #aide_wrap {
 	margin: 0;
 	padding: 8px 20px 12px;
 	position: relative;
 	overflow: auto;}
 
 #screen-meta .screen-reader-text {visibility: hidden;}
-
 #screen-meta-links {margin: 0 24px 0 0;}
 
 /* screen options and help tabs revert */
 #screen-meta {
-	display: none;
+	display: block; /* display: none; */
 	position: relative;
 	margin: 0 15px 0 5px;
 	border-width: 0 1px 1px;
 	border-style: none solid solid;}
 
-#screen-options-link-wrap,
-#contextual-help-link-wrap {
+#bouton_options_ecran, #contextual-help-link-wrap {
 	float: right;
 	height: 22px;
 	padding: 0;
 	margin: 0 0 0 6px;
 	font-family: sans-serif;}
 
-#screen-options-link-wrap,
-#contextual-help-link-wrap,
-#screen-meta {
-	-webkit-border-bottom-left-radius: 3px;
-	-webkit-border-bottom-right-radius: 3px;
-	border-bottom-left-radius: 3px;
-	border-bottom-right-radius: 3px;}
+#bouton_options_ecran, #contextual-help-link-wrap {@extend .aideRadiusBasBouton;}
 
 #screen-meta-links a.show-settings {
 	text-decoration: none;
@@ -394,33 +397,29 @@ $none:none;
 
 .toggle-arrow-active {background-position: bottom left;}
 
-#screen-options-wrap h5,
-#contextual-help-wrap h5 {
+#ecran_options_wrap h5, #aide_wrap h5 {
 	margin: 8px 0;
 	font-size: 13px;}
 
-.metabox-prefs label {
+.metabox label {
 	display: inline-block;
 	padding-right: 15px;
 	white-space: nowrap;
 	line-height: 30px;}
 
-.metabox-prefs label input {
-	margin: 0 5px 0 2px;
-}
+.metabox label input {margin: 0 5px 0 2px;}
 
-.metabox-prefs label a {
-	display: none;
-}
+.metabox label a {display: none;}
 
-/* -- Help text -- */
-#contextual-help-wrap {
+/* -- aide text -- */
+#aide_wrap {
 	padding: 0;
-	margin-left: -4px;}
+	margin-left: -4px;
+@extend .aideRadiusBas;}
 
-#contextual-help-columns {position: relative;}
+#aide_colonnes {position: relative;}
 
-#contextual-help-back {
+#aide_back {
 	position: absolute;
 	top: 0;
 	bottom: 0;
@@ -429,39 +428,39 @@ $none:none;
 	border-width: 0 1px;
 	border-style: solid;}
 
-#contextual-help-wrap.no-sidebar #contextual-help-back {
+#aide_wrap.no-sidebar #aide_back {
 	right: 0;
 	border-right-width: 0;
 	-webkit-border-bottom-right-radius: 2px;
 	border-bottom-right-radius: 2px;}
 
-.contextual-help-tabs {
+.colonne_menu {
 	float: left;
 	width: 150px;
 	margin: 0;}
 
-.contextual-help-tabs ul {margin: 1em 0;}
+.colonne_menu ul {margin: 1em 0;}
 
-.contextual-help-tabs li {
+.colonne_menu li {
 	margin-bottom: 0;
 	list-style-type: none;
 	border-style: solid;
 	border-width: 1px 0;
 	border-color: transparent;}
 
-.contextual-help-tabs a {
+.colonne_menu a {
 	display: block;
 	padding: 5px 5px 5px 12px;
 	line-height: 18px;
 	text-decoration: none;}
 
-.contextual-help-tabs .active {
+.colonne_menu .active {
 	padding: 0;
 	margin: 0 -1px 0 0;
 	border-width: 1px 0 1px 1px;
 	border-style: solid;}
 
-.contextual-help-tabs-wrap {
+.colonne_texte_wrap {
 	padding: 0 20px;
 	overflow: auto;}
 
@@ -476,33 +475,28 @@ $none:none;
 	list-style-type: disc;
 	margin-left: 18px;}
 
-.contextual-help-sidebar {
+.aide_image {
 	width: 150px;
 	float: right;
-	padding: 0 8px 0 12px;
-	overflow: auto;}
-
+	padding: 10px 0px 0 0px;
+	overflow: none;}
 
 /* -- couleur menu aide -- */
 #screen-meta {
 	background-color: #f1f1f1;
 	border-color: #ccc;
-	-webkit-box-shadow: 0 1px 3px rgba( 0, 0, 0, 0.05 );
-	box-shadow: 0 1px 3px rgba( 0, 0, 0, 0.05 );}
+	@include ombreRadiusAide($ombreClair);}
 
-#contextual-help-back {background: #fff;}
-.contextual-help-tabs a:hover {	color: #333;}
-
-#contextual-help-back, .contextual-help-tabs .active {border-color: #ccc;}
-.contextual-help-tabs .active, .contextual-help-tabs .active a, .contextual-help-tabs .active a:hover {background: #fff;color: #000;}
+#aide_back {background: #fff;}
+.colonne_menu a:hover {color: #333;}
+#aide_back, .colonne_menu .active {border-color: #ccc;}
+.colonne_menu .active, .colonne_menu .active a, .colonne_menu .active a:hover {background: #fff;color: #000;}
 
 /* screen options and help tabs */
-#screen-options-link-wrap,
+#bouton_options_ecran,
 #contextual-help-link-wrap {
-	background-color: #e3e3e3; /* Fallback */
-	border-right: 1px solid transparent;
-	border-left: 1px solid transparent;
-	border-bottom: 1px solid transparent;
+	background-color: #e3e3e3;
+	border: 1px solid transparent;
 	background-image: linear-gradient(bottom, rgb(85,85,85) 13%, rgb(67,67,67) 57%, rgb(49,49,49) 88%);
 	background-image: -o-linear-gradient(bottom, rgb(85,85,85) 13%, rgb(67,67,67) 57%, rgb(49,49,49) 88%);
 	background-image: -moz-linear-gradient(bottom, rgb(85,85,85) 13%, rgb(67,67,67) 57%, rgb(49,49,49) 88%);
@@ -510,13 +504,13 @@ $none:none;
 	background-image: -ms-linear-gradient(bottom, rgb(85,85,85) 13%, rgb(67,67,67) 57%, rgb(49,49,49) 88%);
 	background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0.13, rgb(85,85,85)),color-stop(0.57, rgb(67,67,67)),color-stop(0.88, rgb(49,49,49)));}
 
-#contextual-help-link-wrap{width:50px;}
-#screen-options-link-wrap {width:130px;}
+#contextual-help-link-wrap{width:45px;}
+#option_ecran_wrap{width:140px;}
 
-#screen-meta-links a.show-settings {color: #AEAEAE;}
-#screen-meta-links a.show-settings:hover {color: #FFF;}
-#screen-meta-links a.show-settings {background: transparent url(images/arrow_aide.png) no-repeat 96% 5px;}
-#screen-meta-links a.show-settings.screen-meta-active {background: transparent url(images/slidebuttons.png) no-repeat 97% -45px;}
+#screen-meta-links a.show-settings {color: #FFF; @include none($none);}
+#screen-meta-links a.show-settings:hover {color: #09F;}
+#screen-meta-links a.show-settings {background: transparent url(images/arrow_aide.png) no-repeat 100% 4px;}
+#screen-meta-links a.show-settings.screen-meta-active {background: transparent url(images/arrow_aide.png) no-repeat 96% 5px;}
 
 
 /* **********************************************  COLORS ********************************************************** */
@@ -685,9 +679,9 @@ $none:none;
 #content a{color: #0A93CC;}
 
 #content a:hover{
-	color: #000000;
+	color: #000;
 	text-decoration: underline;}
-	
+
 #content em, #content em a{
 	font-style: italic;
 	color: #B2B2B2;
@@ -710,7 +704,6 @@ $none:none;
 
 #content h1 a{color: inherit;}
 #content h1 span{font-size: 16px;}
-#content .bloc:first-child{margin-top: 84px;}
 #content h1 img{vertical-align: top;margin:-15px 10px 0 0;}
 
 #content .bloc{
