--- a/app/webroot/css/styles.css
+++ b/app/webroot/css/styles.css
@@ -227,7 +227,7 @@ p {
 /* ---------------------------------------
 				Container
 ------------------------------------------ */
-/* line 192, styles.scss */
+/* line 188, styles.scss */
 #wrap {
   width: 990px;
   margin: 15px auto 0;
@@ -236,7 +236,7 @@ p {
 /* ---------------------------------------
 				Header
 ------------------------------------------ */
-/* line 200, styles.scss */
+/* line 196, styles.scss */
 header h1 {
   position: relative;
   display: inline-block;
@@ -248,22 +248,21 @@ header h1 {
 /* ---------------------------------------
 				Nav
 ------------------------------------------ */
-/* line 211, styles.scss */
+/* line 207, styles.scss */
 nav.menu {
   height: 17px;
   display: inline-block;
   vertical-align: bottom;
 }
 
-/* line 216, styles.scss */
+/* line 212, styles.scss */
 nav.menu ul li {
   float: left;
   line-height: 1px;
 }
 
-/* line 220, styles.scss */
+/* line 216, styles.scss */
 nav.menu li a {
-  color: white;
   font-size: 1.1em;
   color: black;
   font-weight: normal;
@@ -274,7 +273,7 @@ nav.menu li a {
   text-decoration: none;
 }
 
-/* line 229, styles.scss */
+/* line 225, styles.scss */
 nav.menu ul li a:hover {
   color: white;
   text-decoration: underline;
@@ -283,7 +282,7 @@ nav.menu ul li a:hover {
 /* ---------------------------------------
 				Contenu
 ------------------------------------------ */
-/* line 237, styles.scss */
+/* line 233, styles.scss */
 #contenu {
   width: 990px;
   background: #eeeeee;
@@ -309,12 +308,12 @@ nav.menu ul li a:hover {
   box-shadow: 2px 4px 15px #222222;
 }
 
-/* line 245, styles.scss */
+/* line 241, styles.scss */
 #bg {
   background: #555555 url(images/bg-contenu.jpg) 270px 0 no-repeat;
 }
 
-/* line 247, styles.scss */
+/* line 243, styles.scss */
 #bgBlanc {
   width: 990px;
   background-color: #fff;
@@ -328,17 +327,15 @@ nav.menu ul li a:hover {
   box-shadow: 2px 4px 15px #222222;
 }
 
-/* line 252, styles.scss */
+/* line 248, styles.scss */
 #contenu p {
   color: white;
   font-size: 0.8em;
   padding: 10px;
 }
 
-#contenu #bgBlanc p{color: #000}
-
 /* --  Bloc fiche-- */
-/* line 259, styles.scss */
+/* line 255, styles.scss */
 section.bloc {
   width: 600px;
   display: inline-block;
@@ -346,19 +343,19 @@ section.bloc {
   padding: 30px 0;
 }
 
-/* line 265, styles.scss */
+/* line 261, styles.scss */
 section.bloc h1, section.bloc p {
   display: inline-block;
   vertical-align: top;
 }
 
-/* line 269, styles.scss */
+/* line 265, styles.scss */
 section.bloc p {
   width: 500px;
 }
 
 /* -- image accessoires -- */
-/* line 273, styles.scss */
+/* line 269, styles.scss */
 aside#image-accessoires {
   display: inline-block;
   vertical-align: top;
@@ -367,7 +364,7 @@ aside#image-accessoires {
   left: 20px;
 }
 
-/* line 280, styles.scss */
+/* line 276, styles.scss */
 aside#image-accessoires img {
   width: 313px;
   height: 282px;
@@ -376,7 +373,7 @@ aside#image-accessoires img {
 /* ---------------------------------------
 				catalogue
 ------------------------------------------ */
-/* line 288, styles.scss */
+/* line 284, styles.scss */
 section.catalogue {
   position: relative;
   display: inline-block;
@@ -384,7 +381,7 @@ section.catalogue {
   margin: 0 auto;
 }
 
-/* line 294, styles.scss */
+/* line 290, styles.scss */
 section.catalogue h1, #bgBlanc h1 {
   display: block;
   vertical-align: top;
@@ -399,7 +396,7 @@ section.catalogue h1, #bgBlanc h1 {
   text-shadow: 1px 1px 2px #999;
 }
 
-/* line 307, styles.scss */
+/* line 303, styles.scss */
 section.catalogue figure {
   position: relative;
   display: inline-block;
@@ -407,25 +404,25 @@ section.catalogue figure {
   margin: 0;
 }
 
-/* line 313, styles.scss */
+/* line 309, styles.scss */
 section.catalogue figure img {
   border: 1px solid white;
   padding: 3px;
   margin: 10px;
 }
 
-/* line 318, styles.scss */
+/* line 314, styles.scss */
 section.catalogue nav {
   margin-left: 15px;
 }
 
-/* line 320, styles.scss */
+/* line 316, styles.scss */
 section.catalogue nav a:hover figcaption {
   color: #AA4673;
   text-decoration: underline;
 }
 
-/* line 324, styles.scss */
+/* line 320, styles.scss */
 section.catalogue figcaption {
   background-color: #fff;
   color: black;
@@ -435,7 +432,7 @@ section.catalogue figcaption {
   bottom: 14px;
 }
 
-/* line 332, styles.scss */
+/* line 328, styles.scss */
 section.catalogue img {
   display: block;
   margin: 10px 0;
@@ -453,26 +450,26 @@ section.catalogue img {
 /* ---------------------------------------
 				Fiche produits
 ------------------------------------------ */
-/* line 342, styles.scss */
+/* line 338, styles.scss */
 .fiche h4 {
   margin-left: 0;
 }
 
-/* line 343, styles.scss */
+/* line 339, styles.scss */
 .produit-gauche {
   width: 300px;
   float: left;
   padding: 0;
 }
 
-/* line 344, styles.scss */
+/* line 340, styles.scss */
 .produit-droit {
   width: 225px;
   float: left;
   padding-left: 25px;
 }
 
-/* line 345, styles.scss */
+/* line 341, styles.scss */
 .fiche .photos {
   border: 3px solid #DBE5E8;
   -webkit-border-radius: 0px;
@@ -485,7 +482,7 @@ section.catalogue img {
   box-shadow: 1px 1px 14px #555555;
 }
 
-/* line 346, styles.scss */
+/* line 342, styles.scss */
 .fiche .prix {
   display: block;
   float: none;
@@ -499,7 +496,7 @@ section.catalogue img {
   text-shadow: 1px 1px 2px #999;
 }
 
-/* line 347, styles.scss */
+/* line 343, styles.scss */
 .fiche .ancien-prix {
   font-weight: bold;
   text-decoration: line-through;
@@ -509,19 +506,19 @@ section.catalogue img {
   font-size: 1.1em;
 }
 
-/* line 348, styles.scss */
+/* line 344, styles.scss */
 .fiche .description {
   border-bottom: 1px solid #D9D9D9;
   padding-bottom: 11px;
   margin-bottom: 7px;
 }
 
-/* line 349, styles.scss */
+/* line 345, styles.scss */
 .fiche .description li {
   line-height: 18px;
 }
 
-/* line 350, styles.scss */
+/* line 346, styles.scss */
 .fiche .titre {
   font-size: 1.2em;
   font-weight: bold;
@@ -530,20 +527,20 @@ section.catalogue img {
   text-decoration: underline;
 }
 
-/* line 351, styles.scss */
+/* line 347, styles.scss */
 .fiche .promo {
   border-bottom: 1px solid #D9D9D9;
   padding: 3px 0 20px;
 }
 
-/* line 352, styles.scss */
+/* line 348, styles.scss */
 .fiche .miniatures, .fiche .miniatures li {
   background: none;
   padding: 0;
   margin: 0;
 }
 
-/* line 353, styles.scss */
+/* line 349, styles.scss */
 .fiche .miniatures li a {
   float: left;
   border: 2px solid #D9D9D9;
@@ -559,7 +556,7 @@ section.catalogue img {
   box-shadow: 1px 1px 14px #555555;
 }
 
-/* line 354, styles.scss */
+/* line 350, styles.scss */
 .fiche .miniatures li a:hover {
   border-color: #AA4673;
   /*+opacity:80%;*/
@@ -569,17 +566,17 @@ section.catalogue img {
   opacity: 0.8;
 }
 
-/* line 355, styles.scss */
+/* line 351, styles.scss */
 .fiche .tags a {
   text-decoration: underline;
 }
 
-/* line 356, styles.scss */
+/* line 352, styles.scss */
 .produit-partage a {
   text-decoration: none;
 }
 
-/* line 357, styles.scss */
+/* line 353, styles.scss */
 .produit-partage a:hover {
   opacity: 0.7;
   -moz-opacity: 0.7;
@@ -587,12 +584,12 @@ section.catalogue img {
 }
 
 /* gallerie */
-/* line 361, styles.scss */
+/* line 357, styles.scss */
 .gallerie {
   overflow: none;
 }
 
-/* line 362, styles.scss */
+/* line 358, styles.scss */
 .gallerie h4 {
   line-height: 18px;
   padding: 20px 0 5px;
@@ -606,40 +603,40 @@ section.catalogue img {
   text-shadow: 1px 1px 2px #999;
 }
 
-/* line 363, styles.scss */
+/* line 359, styles.scss */
 .gallerie h4 a {
   text-decoration: none;
 }
 
-/* line 364, styles.scss */
+/* line 360, styles.scss */
 .gallerie a {
   color: #444;
 }
 
-/* line 365, styles.scss */
+/* line 361, styles.scss */
 .gallerie a:hover {
   color: #AA4673;
   text-decoration: underline;
 }
 
-/* line 366, styles.scss */
+/* line 362, styles.scss */
 .gallerie p {
   padding: 5px 0;
 }
 
-/* line 367, styles.scss */
+/* line 363, styles.scss */
 .gallerie .blanc {
   background: #FFF;
   margin: 20px;
 }
 
-/* line 368, styles.scss */
+/* line 364, styles.scss */
 .gallerie .blanc h4 {
   font: bold 2.1em 'riesling';
 }
 
 /* -- fomulaire de contact --*/
-/* line 372, styles.scss */
+/* line 368, styles.scss */
 #formContact {
   position: relative;
   display: inline-block;
@@ -648,9 +645,8 @@ section.catalogue img {
   padding: 0;
 }
 
-/* line 379, styles.scss */
-#formContact legend {
-  display: block;
+/* line 375, styles.scss */
+#formContact h1 {
   font: normal 4.5em 'riesling';
   text-align: left;
   text-decoration: none;
@@ -658,14 +654,14 @@ section.catalogue img {
   color: #AA4673;
 }
 
-/* line 386, styles.scss */
+/* line 382, styles.scss */
 form.formulaire {
   width: 360px;
   display: inline-block;
   vertical-align: top;
 }
 
-/* line 391, styles.scss */
+/* line 387, styles.scss */
 input[type=text], textarea {
   border: none;
   background: #fff;
@@ -684,7 +680,7 @@ input[type=text], textarea {
   box-shadow: 1px 1px 13px #333;
 }
 
-/* line 408, styles.scss */
+/* line 404, styles.scss */
 textarea {
   font-size: 1.3em;
   max-width: 390px;
@@ -693,26 +689,23 @@ textarea {
   margin: 25px 0 20px 0;
 }
 
-/* line 415, styles.scss */
+/* line 411, styles.scss */
 fieldset {
   border: 0 none;
 }
 
-/* line 416, styles.scss */
+/* line 412, styles.scss */
 legend {
-  /*display: none;*/
+  display: none;
+}
+
+/* line 414, styles.scss */
+.envoyer {
+  margin: 10px 0 0 212px;
+  padding: 0;
 }
 
 /* line 418, styles.scss */
-.envoyer input {
-  margin: 10px 0 0 212px;
-  width: 145px;
-  height: 50px;
-  padding: 0;
-  background: url('images/envoi.png') top left no-repeat;
-}
-
-/* line 422, styles.scss */
 .envoyer:hover {
   opacity: 0.8;
   -moz-opacity: 0.8;
@@ -720,26 +713,26 @@ legend {
 }
 
 /*adresse-sociaux*/
-/* line 429, styles.scss */
+/* line 425, styles.scss */
 #reseauxSociaux {
   color: #878383;
   font-size: 1.3em;
   margin-left: 15px;
 }
 
-/* line 434, styles.scss */
+/* line 430, styles.scss */
 #reseauxSociaux a {
   display: inline-block;
   vertical-align: top;
   margin: 10px 40px 0 0;
 }
 
-/* line 439, styles.scss */
+/* line 435, styles.scss */
 #reseauxSociaux a img {
   width: 150px;
 }
 
-/* line 441, styles.scss */
+/* line 437, styles.scss */
 #reseauxSociaux a:hover img {
   opacity: 0.6;
   -moz-opacity: 0.6;
@@ -747,7 +740,7 @@ legend {
 }
 
 /* -- planGoogle -- */
-/* line 449, styles.scss */
+/* line 445, styles.scss */
 #planGoogle {
   display: inline-block;
   vertical-align: top;
@@ -768,20 +761,20 @@ legend {
 /* ---------------------------------------
 				partenariats
 ------------------------------------------ */
-/* line 464, styles.scss */
+/* line 460, styles.scss */
 section#partenaires {
   color: #0F0F0F;
   margin: 0 auto;
   width: 970px;
 }
 
-/* line 465, styles.scss */
+/* line 461, styles.scss */
 ul.ligne1, ul.ligne2 {
   margin: 20px 0;
   display: inline-block;
 }
 
-/* line 466, styles.scss */
+/* line 462, styles.scss */
 ul.ligne1 li, ul.ligne2 li {
   display: inline-block;
   vertical-align: top;
@@ -791,35 +784,35 @@ ul.ligne1 li, ul.ligne2 li {
   text-align: center;
 }
 
-/* line 467, styles.scss */
+/* line 463, styles.scss */
 ul.ligne1 li:first-child, ul.ligne2 li:first-child {
   border: 0;
 }
 
-/* line 468, styles.scss */
+/* line 464, styles.scss */
 ul.ligne1 li ul li, ul.ligne2 li ul li {
   padding: 0;
   margin: 3px 0;
   border: none;
 }
 
-/* line 469, styles.scss */
+/* line 465, styles.scss */
 ul.ligne1 li h3, ul.ligne2 li h3 {
   margin-bottom: 15px;
   font: bold 2.4em 'riesling';
 }
 
-/* line 470, styles.scss */
+/* line 466, styles.scss */
 ul.ligne1 ul li.site_web, ul.ligne2 ul li.site_web {
   padding-top: 15px;
 }
 
-/* line 471, styles.scss */
+/* line 467, styles.scss */
 ul.ligne2 li#dernier {
   border-right: 1px solid #E3E3E3;
 }
 
-/* line 472, styles.scss */
+/* line 468, styles.scss */
 ul.ligne2 li#avant_dernier {
   border: none;
 }
@@ -828,7 +821,7 @@ ul.ligne2 li#avant_dernier {
 				Footer
 ------------------------------------------ */
 /* --  bandeau -- */
-/* line 479, styles.scss */
+/* line 475, styles.scss */
 #bandeau {
   border-top: 1px solid #F0F0F0;
   width: 990px;
@@ -841,7 +834,7 @@ ul.ligne2 li#avant_dernier {
   border-radius: 0px 0px 15px 15px / 0px 0px 15px 15px;
 }
 
-/* line 486, styles.scss */
+/* line 482, styles.scss */
 #bandeau ul {
   display: inline-block;
   vertical-align: top;
@@ -850,18 +843,18 @@ ul.ligne2 li#avant_dernier {
   padding-left: 10px;
 }
 
-/* line 493, styles.scss */
+/* line 489, styles.scss */
 #bandeau ul.horaires {
   text-align: right;
 }
 
-/* line 495, styles.scss */
+/* line 491, styles.scss */
 #bandeau li.titre {
   font-weight: bold;
   font-size: 1.4em;
 }
 
-/* line 499, styles.scss */
+/* line 495, styles.scss */
 #bandeau img {
   display: inline-block;
   vertical-align: top;
